修改并完善了js代码, 整理注释并去掉无用代码 添加了调试使用的标记, 调试信息在非调试模式下不会显示 完善了第二页, 但免费api的效果不好 添加第一页和第二页的逻辑判断, 减少不合法输入

--- a/src/pages/p0/p0.wxss
+++ b/src/pages/p0/p0.wxss
@@ -6,3 +6,10 @@
     word-break: break-all;
     box-shadow: 0 0 black;
 }
+/* 不加的话弹出框会穿模 */
+.weui-select {
+    z-index: unset;
+}
+.weui-cells {
+    position: sticky;
+}
