--- a/src/pages/p0/p0.wxml
+++ b/src/pages/p0/p0.wxml
@@ -1,12 +1,14 @@
 <!--pages/p1/p1.wxml-->
-<view>调试数据</view>
-<view>{{currencyIndexB}}</view>
-<view>{{currencyIndexE}}</view>
-<view>{{inputValB}}</view>
-<view>{{inputValE}}</view>
-<view>{{showTopTips}}</view>
-<view>{{keysign}}</view>
-
+<view wx:if="{{debugMode}}">调试数据
+    <view>{{currencyIndexB}}</view>
+    <view>{{currencyIndexE}}</view>
+    <view>{{inputValB}}</view>
+    <view>{{inputValE}}</view>
+    <view>{{showTopTips}}</view>
+    <view>{{keysign}}</view>
+    <view>{{queryurl}}</view>
+    <view>{{queryret}}</view>
+</view>
 
 <view class="page" data-weui-theme="{{theme}}">
     <view class="page__hd">
@@ -34,38 +36,50 @@
                 </view>
                 <view class="weui-cell__bd">
                     <picker bindchange="bindCurrencyChangeE" value="{{currencyIndexE}}" range="{{currenciesZH}}">
-                        <view class="weui-select weui-select_in-select-after">{{currenciesZH[currencyIndexE]}}</view>
+                        <view class="weui-select">{{currenciesZH[currencyIndexE]}}</view>
                     </picker>
                 </view>
             </view>
         </view>
 
         <view class="weui-btn-area">
-            <!-- <button class="weui-btn" type="primary" bindtap="showTopTips">确定</button> -->
-            <button class="weui-btn" type="primary" bindtap="showTopTips">查询</button>
+            <button class="weui-btn" type="primary" bindtap="updateHuilv">查询</button>
         </view>
 
         <view class="weui-cells__title">兑换换算</view>
         <view class="weui-cells weui-cells_after-title">
             <view class="weui-cell weui-cell_active">
-                <!-- <view class="weui-cell__bd">汇率：{{huilvA}}</view>
-                <view class="weui-cell__bd">汇率：{{huilvB}}</view> -->
-                <view class="weui-cell__bd">汇率：{{huilvC}}</view>
+                <view class="weui-cell__bd">汇率：{{huilv}}</view>
+            </view>
+        </view>
+
+        <!-- 文本输入框 -->
+        <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_active">
+                <view class="weui-cell__bd">
+                    <input class="weui-input" bindtap="bindInputChangeB" type="number" value="{{inputValB}}" placeholder="请输入金额" />
+                </view>
             </view>
         </view>
         <view class="weui-cells weui-cells_after-title">
             <view class="weui-cell weui-cell_active">
                 <view class="weui-cell__bd">
-                    <input class="weui-input" bindchange="bindInputChangeB" type="number" value="{{inputValB}}" placeholder="请输入金额" />
+                    <input class="weui-input" bindtap="bindInputChangeE" type="number" value="{{inputValE}}" placeholder="兑换的金额" />
                 </view>
             </view>
         </view>
-        <!-- <view class="weui-cells__title">文本框</view> -->
-        <view class="weui-cells weui-cells_after-title">
-            <view class="weui-cell weui-cell_active">
-                <view class="weui-cell__bd">
-                    <input class="weui-input" bindinput="bindInputChangeE" type="number" value="{{inputValE}}" placeholder="兑换的金额" />
-                </view>
+    </view>
+
+    <!-- 提示页 -->
+    <view class="fadeIn" wx:if="{{tipDialog0}}">
+        <view class="weui-mask" bindtap="bindTipClose"></view>
+        <view class="weui-dialog weui-skin_android">
+            <view class="weui-dialog__hd"><strong class="weui-dialog__title">失败</strong></view>
+            <view class="weui-dialog__bd">
+                所选货币种类不应一致!
+            </view>
+            <view class="weui-dialog__ft">
+                <a class="weui-dialog__btn weui-dialog__btn_primary" bindtap="bindTipClose">好的</a>
             </view>
         </view>
     </view>
