--- a/src/pages/p1/p1.wxss
+++ b/src/pages/p1/p1.wxss
@@ -6,3 +6,15 @@
     word-break: break-all;
     box-shadow: 0 0 black;
 }
+/* 不加的话弹出框会穿模 */
+.weui-select {
+    z-index: unset;
+}
+.weui-cells {
+    position: sticky;
+}
+/* 不加的话折线图会穿模 */
+.canvas {
+    width: 95%;
+    height: 200px;
+}
